--- a/build.gradle
+++ b/build.gradle
@@ -18,15 +18,15 @@ buildscript {
 apply plugin: 'forge'
 
 //these 5 things are what you change
-version = "1.7.10-0.2"//mod version (whatever scheme), end of final jar file name
+version = "1.7.10-0.2"//mod version (whatever scheme), end of final jar file name, change it here, mcmod.info, and Reference
 group = "com.empiricist.redcontrols" // prefix.yourname.modid, http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "redcontrols"//modid, start of jar file name
 
 minecraft {
     //forge version (MC-MCF)
     //(update by changing #, gradlew( clean, setupDecompWorkspace, idea/eclipse ) (also change Reference and mcmod.info)
-    //previously 1.7.10-10.13.0.1180
-    version = "1.7.10-10.13.4.1492-1.7.10"
+    //previously 1.7.10-10.13.0.1180, 1.7.10-10.13.4.1492-1.7.10
+    version = "1.7.10-10.13.4.1558-1.7.10"
     //assetDir = "eclipse/assets"//deprecated now?//location of stuff in folder
 }
 
